sample-node/spot-dev/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sample-node
  strategy:
    blueGreen:
      activeService: sample-node
      autoPromotionEnabled: false
      autoPromotionSeconds: 10
      previewReplicaCount: 1
      previewService: sample-node-preview
      scaleDownDelaySeconds: 5
  template:
    metadata:
      labels:
        app: sample-node
        app.kubernetes.io/name: sample-node
        version: v0.3.105
    spec:
      containers:
        - image: nalbam/sample-node:v0.3.105
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: sample-node
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 120Mi
            limits:
              cpu: 110m
              memory: 134Mi
