sample-node/spot-dev/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-node-preview
    app.kubernetes.io/name: sample-node
  name: sample-node-preview
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: sample-node
