sample-node/spot-dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-node-dev.spot.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-node
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-node-dev.spot.mzdev.be
      secretName: sample-node-mzdev-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node-preview
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-node-dev-preview.spot.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-node-preview
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-node-dev-preview.spot.mzdev.be
      secretName: sample-node-preview-mzdev-tls
